# rust-rtos

./: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: allocator.rs  api.rs  arch.rs  drivers.rs  lib.rs  main.rs  mutex.rs  scheduler.rs  supervisor.rs  syscall.rs  toinit.rs
src/arch/: cortex_m0p.rs  cortex_m4.rs
src/arch/common/: interrupts.rs
src/arch/cortex_m0p/: interrupts.rs  switching.rs
src/arch/cortex_m4/: interrupts.rs  switching.rs
src/drivers/: l053r8.rs
src/scheduler/: arguments.rs  handle.rs  task.rs
src/syscall/: ids.rs
