[package]
name = "rust-rtos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
target = ""
test = false
bench = false

[[bin]]
name = "rust-rtos"
test = false
bench = false

[features]
"l053r8" = ["cortex-m0+", "stm32l0xx-hal/mcu-STM32L053R8Tx"]
"cortex-m0+" = []

[dependencies]
alloc-cortex-m = "0.4.3"
cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.7"
# embedded-hal = "0.2"
# embedded-time = "0.12"
heapless = "0.7.16"
# panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
stm32l0xx-hal = { optional = true, version = "0.10" }
# stm32f0xx-hal = { version = "0.18.0", features = ["stm32f030x8"] }

[profile.release]
lto = true
strip = "debuginfo"
