[package]
name = "rust-rtos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
target = ""
test = false
bench = false

[[bin]]
name = "rust-rtos"
test = false
bench = false

[features]
"l053r8" = ["cortex-m0+", "stm32l0xx-hal/mcu-STM32L053R8Tx"]
"f401" = ["cortex-m4", "stm32f4xx-hal/stm32f401"]
"cortex-m0+" = []
"cortex-m4" = []

[dependencies]
alloc-cortex-m = "0.4.3"
cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.7"
heapless = "0.7.16"
panic-semihosting = "0.6.0"
stm32l0xx-hal = { optional = true, version = "0.10" }
stm32f4xx-hal = { optional = true, version = "0.15" }

[profile.release]
lto = true
strip = "debuginfo"
